# data_engineering

./: .env  .gitignore  README.md  check_schema.py  check_tables.py  docker-compose.yml  pyproject.toml  query_db.py  requirements.txt  test_pg.py  tmp_check_frontend_metrics.py  tmp_fix_unified_rates.py  tmp_verify_rates.py
dags/: currency_pipeline_dag.py
frontEnd-Streamlit/: .env.example  README.md  app.py  requirements.txt
frontEnd-Streamlit/.streamlit/: config.toml
frontEnd-Streamlit/components/: charts.py
frontEnd-Streamlit/data/: sources.py
frontEnd-Streamlit/pages/: batch.py  health.py  overview.py  stream.py
frontEnd-Streamlit/services/: db.py
ingestion/: batch_ingest.py  kafka_consumer.py  kafka_producer.py
streaming/: consumer.py  producer.py
tests/: test_transforms.py
transformation/: db.py  models.py  settings.py  sql.py  transform.py
