[project]
name = "data-engineering"
version = "0.1.0"
description = "Currency and crypto data engineering pipeline with batch and streaming workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.8.1",
    "boto3>=1.42.91",
    "connexion[swagger-ui]>=2.10.0,<3.0",
    "kafka-python>=2.3.1",
    "pandas>=3.0.2",
    "plotly>=5.22,<6.0",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.33.1",
    "streamlit>=1.35,<2.0",
]
